Fix gird spacing, remove unneeded styles, set max-width on profile pic to avoid stretching.

--- a/src/styles/components/pages/aboutPage/profileContainer.scss
+++ b/src/styles/components/pages/aboutPage/profileContainer.scss
@@ -16,10 +16,11 @@
     border-radius: 10px;
     @include drop-shadow;
 
-    // Grid layouts
+    // Grid layouts, media queries
     grid-template-columns: 50% 50%;
     @include bp(mid) {
       grid-template-columns: 30% 70%;
+      grid-template-rows: 5rem auto;
     }
     @include bp(tablet) {
       display: flex;
@@ -57,6 +58,7 @@
     }
 
     .profile-img-wrapper {
+      max-width: 30rem;
       width: 10rem;
       height: 10rem;
       display: flex;
@@ -78,7 +80,6 @@
         margin: 0 auto 2rem;
         width: 100%;
         height: unset;
-        max-width: 100%;
       }
       img {
         max-width: 100%;
@@ -86,10 +87,6 @@
     }
     .profile-name-role {
       grid-column: 2 3;
-
-      @include bp(tablet) {
-        margin-bottom: 1rem;
-      }
     }
     .profile-bio {
       grid-column-end: span 2;
